Overflow Error Fixed Mobile

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -30,6 +30,10 @@ p {
 
 /*Home Container*/
 
+#wrapper {
+    overflow: hidden;
+}
+
 .homeContainer {
     overflow: hidden;
 }
@@ -462,7 +466,7 @@ a#dotPlayPause {
         cursor: pointer;
         height: 18px;
         width: 18px;
-        background: $darkGrey;
+        background: #32302e;
         border-radius: 20px;
         margin-right: 10px;
         box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5),
@@ -470,7 +474,7 @@ a#dotPlayPause {
 
         a {
             font-size: 12px;
-            color: $darkGrey;
+            color: #32302e;
             border:1px solid none;
             text-decoration : none;
             padding : 0px 6px;
